<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackgroundCustom">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorBackgroundCustom"
        app:title="@string/teacher_announcements_title"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/emptyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_announcements"
        android:textSize="@dimen/text_medium"
        android:textColor="?attr/colorTextCustom"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAnnouncements"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/card_padding"
        android:paddingBottom="@dimen/rv_padding_bottom"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/margin_medium"
        android:contentDescription="@string/fab_create_announcement_cd"
        app:srcCompat="@android:drawable/ic_input_add"
        app:backgroundTint="?attr/colorAccentCustom"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>